# graphio_extractor

./: Cargo.toml
data/: Cargo.toml
data/src/: lib.rs  serde_int.rs  serde_option_ratio.rs  serde_ratio.rs
src/: export_prototypes.lua  extract_icons.lua  factorio_io.rs  main.rs  parsing.rs
